# GameEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CreateLinuxSymLinks.sh  CreateWinSymLinks.bat  Game Engine.sln  MineSweeper.r  README.md  WindowsBuildScript.bat  base.r  run.sh
AdventureGame/: AdventureGame.cpp  AdventureGame.h  CMakeLists.txt
Astroids/: Astroids.cpp  Astroids.h  Astroids.vcxproj  Astroids.vcxproj.filters  resource.r
CMake/: CompileFlags.cmake  ConfigurePluginExtension.cmake  VisualStudioVersionCheck.cmake
DX9 Renderer/: DX9 Renderer.vcxproj  DX9 Renderer.vcxproj.filters  DX92DRenderer.cpp  DX92DRenderer.h  DX93DRenderer.h  DX9Plugin.cpp  DX9Plugin.h  FontEngine.cpp  FontEngine.h  LineEngine.cpp  LineEngine.h  ResourceManager.cpp  ResourceManager.h  SpriteManager.cpp  SpriteManager.h  Streams.h  TextureManager.cpp  TextureManager.h
DX9 Rendering/: ClassDiagram1.cd  DX9 Rendering.vcxproj  DX9 Rendering.vcxproj.filters  DX9 plugin.cpp  DX9 plugin.h
DXInput/: CMakeLists.txt  DXInput.cpp  DXInput.h  DXInput.vcxproj  DXInput.vcxproj.filters
DirectX Input DLL/: BInput.cpp  BInput.h  ClassDiagram1.cd  DirectX Input DLL.vcxproj  DirectX Input DLL.vcxproj.filters
Examples/: FlockingAlgorithm.r  MineSweeper.r
Examples/MinimumSpanningTree/: CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  MinimumSpanningTree.cpp  MinimumSpanningTree.h  Node.cpp  Node.h  PriorityQueue.h
FlockingAlgorithm/: CMakeLists.txt  FlockingAlgorithm.cpp  FlockingAlgorithm.h  FlockingAlgorithm.vcxproj  FlockingAlgorithm.vcxproj.filters
GUI/: Button.cpp  Button.h  ButtonBase.cpp  ButtonBase.h  CMakeLists.txt  Checkbox.h  GUI.cpp  GUI.h  GUIFactory.h  GenericButton.h  IElement.h  IUIElement.h  Menu.cpp  Menu.h  ProgressBar.cpp  ProgressBar.h  Slider.cpp  Slider.h  TextBox.cpp  TextBox.h
Game Engine/: BCamera.cpp  BCamera.h  BEngine.cpp  BEngine.h  BFont.cpp  BNew.cpp  BNew.h  Camera.cpp  Camera.h  ClassDiagram1.cd  ClassDiagram11.cd  CreatorId.h  Delegates.h  DistributedFactory.cpp  DistributedFactory.h  DxPolygon.cpp  DxPolygon.h  EngineHelper.h  Factory.h  FileManager.cpp  FileManager.h  Game Engine.vcxproj  Game Engine.vcxproj.filters  Game.cpp  Game.h  GameConstants.cpp  GameState.h  GameStateFactory.cpp  GameStateFactory.h  GameStateMachine.cpp  GameStateMachine.h  GameStateScript.h  Graph.h  Heap.cpp  Heap.h  IInput.h  IKMInput.h  IPlugin.h  IRender.h  IRenderer.h  (+60 more)
GameEngine/: BCamera.cpp  BCamera.h  BFont.h  BInput.cpp  BInput.h  BNew.cpp  BNew.h  BaseResourceManager.h  CMakeLists.txt  Camera.cpp  Camera.h  Delegates.h  DxPolygon.cpp  EngineHelper.cpp  Factory.h  FileManager.cpp  FileManager.h  GLFWInit.cpp  GLFWInit.h  GUIButton.h  Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  GameState.cpp  GameState.h  GameStateConstants.h  GameStateFactory.h  GameStateMachine.cpp  GameStateMachine.h  GameStateScript.cpp  GameStateScript.h  Heap.cpp  Heap.h  IGameState.h  IGrid.h  IGrid.inl  IInput.h  IKMInput.h  IPlugin.h  (+44 more)
GameEngine/interfaces/: IGameState.h  IInput.h  IKMInput.h  IPlugin.h  IRender.h  IRenderer.h  IResourceManager.h
GameLauncher/: AdventureGame.r  CMakeLists.txt  FileManager.cpp  Game.cpp  Game.h  GameLauncher.vcxproj  GameStateMachine.cpp  GameStateScript.cpp  GameStateScript.h  PluginManager.cpp  main.cpp
Input/: CMakeLists.txt  Input.cpp  Input.h
MemoryManager/: CMakeLists.txt  Heap.h
Menu/: GameOfLifeMenu.cpp  GameOfLifeMenu.h  Menu.vcxproj  Menu.vcxproj.filters
MineSweeper/: CMakeLists.txt  MineSweeper.cpp  MineSweeper.h
OpenGLRenderer/: AbstractRenderer.cpp  ApplyShader.cpp  ApplyShader.h  BaseResourceManager.h  CMakeLists.txt  FontEngine.cpp  FontEngine.h  FontRenderer.h  GenerateBuffers.cpp  GenerateBuffers.h  IRenderable.h  LineEngine.cpp  LineEngine.h  OpenGLRenderer.vcxproj  OpenGLRenderer.vcxproj.filters  ResourceManager.cpp  ResourceManager.h  SpriteEngine.cpp  SpriteEngine.h  SpriteRenderer.cpp  SpriteRenderer.h  VertexBuffer.cpp  VertexBuffer.h  VertexStructures.cpp  VertexStructures.h  oglRenderer.cpp  oglRenderer.h
PCH/: PCH.vcxproj  PCH.vcxproj.filters  StdAfx.cpp  StdAfx.h
Pacman/: Pacman.vcxproj  Pacman.vcxproj.filters  pacman.cpp  pacman.h  resource.r
Plugin Manager/: Plugin Manager.vcxproj  Plugin Manager.vcxproj.filters  PluginManager.cpp  PluginManager.h
Pong/: Pong.cpp  Pong.h  Pong.vcxproj  Pong.vcxproj.filters  resource.r
QuadTree/: CMakeLists.txt  NodeIterator.cpp  NodeIterator.h  QuadTree.cpp  QuadTree.h
Scripts/: Build Script Button.as  Clear.as  ConsoleBuildButton.as  EnumDisplay.as  ScriptConsole.as  ShowFunctions.as  TextBox.as
Test/: Astroids.cpp  Astroids.h  Pong.h  (+18 more)
Test Application/: ClassDiagram1.cd  Test Application.vcxproj  Test Application.vcxproj.filters  Test.as  main.cpp  main.h
common/: CMakeLists.txt  Camera.cpp  Camera.h  CommonExport.h  DxPolygon.h  FileManager.cpp  FileManager.h  GameState.cpp  Graph.h  IGrid.h  IGrid.inl  ISerializable.h  Log.cpp  Log.h  QuadTree.h  RefCounting.cpp  RefCounting.h  SerializedState.h  StringAlgorithms.cpp  Timer.cpp  Timer.h  VecMath.cpp  VecMath.h
source/GameEngine/: CMakeLists.txt  GLFWInit.cpp  Game.cpp  Game.h  GameStateMachine.cpp  GameStateMachine.h  PluginManager.cpp  PluginManager.h  ResourceFileLoader.cpp
source/GameEngine/interfaces/: IInput.h  IPlugin.h  IRender.h  IRenderer.h
source/Input/: CMakeLists.txt  Input.cpp  Input.h
source/OpenGLRenderer/: AbstractRenderer.cpp  AbstractRenderer.h  ApplyShader.cpp  ApplyShader.h  CMakeLists.txt  FontRenderer.cpp  FontRenderer.h  IRenderable.h  LineEngine.cpp  LineEngine.h  LineRenderer.cpp  LineRenderer.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h  VertexBuffer.cpp  VertexBuffer.h  oglCallback.cpp  oglCallback.h  oglRenderer.cpp  oglRenderer.h
source/PluginLoader/: CMakeLists.txt  PluginLoader.cpp  PluginLoader.h
source/common/: CMakeLists.txt  Camera.cpp  Camera.h  IGrid.h  IGrid.inl  Log.cpp  Log.h  PooledAllocator.h  Random.cpp  Random.h  RandomGenerator.cpp  RandomGenerator.h  SerializedState.cpp  Timer.h  VecMath.cpp  VecMath.h
(+72 files in other folders)
